# triplechartest

./: .gitignore  README.md  pyproject.toml
src/triplechartest/: camera.py  comtocom.py  rigol.py
tests/: conftest.py  test_main.py
